--- a/weather.html
+++ b/weather.html
@@ -40,6 +40,7 @@
                 
                 $("#weatherButton").click(function(e)
                 {
+		    console.log(data);
                     var value = $("#cityField").val();
                     console.log(value);
                     e.preventDefault();
@@ -52,7 +53,7 @@
                         url : myurl,
                         dataType : "json",
                         sccess : function(parsed_json) 
-                        {
+                        {   
                             var location = parsed_json['location']['city'];
                             var temp_string = parsed_json['current_observation']['temperature_string'];
                             var current_weather = parsed_json['current_observation']['weather'];
