--- a/weather.html
+++ b/weather.html
@@ -51,18 +51,8 @@
                     $.ajax({
                         url : myurl,
                         dataType : "json",
-                        sccess : function(parsed_json) 
-                        {   
-                            console.log(data);
-                            var location = parsed_json['location']['city'];
-                            var temp_string = parsed_json['current_observation']['temperature_string'];
-                            var current_weather = parsed_json['current_observation']['weather'];
-                            everything = "<ul>";
-                            everything += "<li>Location: "+location;
-                            everything += "<li>Temperature: "+temp_string;
-                            everything += "<li>Weather: "+current_weather;
-                            everything += "</ul>";
-                            $("#weather").html(everything);
+                        success : function(data) {
+                        console.log(data);
                         }
                     });
                 });
