--- a/weather.html
+++ b/weather.html
@@ -53,8 +53,12 @@
                         dataType : "json",
                         success : function(parsed_json) {
                             var location = parsed_json['location']['city'];
+                            var temp_string = parsed_json['current_observation']['temperature_string'];
+                            var current_weather = parsed_json['current_observation']['weather'];
                             everything = "<ul>";
                             everything += "<li>Location: "+location;
+                            everything += "<li>Temperature: "+temp_string;
+                            everything += "<li>Weather: "+current_weather;
                             everything += "</ul>";
                             $("#weather").html(everything);
                         }
