--- a/weather.html
+++ b/weather.html
@@ -77,7 +77,7 @@
                         dataType : "json",
                         success :function(parsed_json) 
                         {
-                            consol.log(parsed_json);
+                            console.log(parsed_json);
                         }
                     });
 
